# web-fetch-low-tokens

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README2.md
.claude/: settings.local.json
.claude/plan/: rust_migration.md
.devcontainer/: devcontainer.json  setup.sh
src/: config.rs  data_proxy.rs  db.rs  error.rs  html_cleaner.rs  json_cleaner.rs  lib.rs  main.rs  mcp.rs  optimizer.rs  server.rs  token.rs  url_validator.rs
tests/: db.rs  e2e.rs  html_cleaner.rs  json_cleaner.rs  optimizer.rs  token.rs  url_validator.rs
