[package]
name = "fetchless"
version = "0.1.0"
edition = "2021"
description = "Token-optimized web proxy — strips pages to clean text for AI agents"
license = "MIT"
repository = "https://github.com/Jbijjer/web-fetch-low-tokens"

[lib]
name = "fetchless"
path = "src/lib.rs"

[[bin]]
name = "fetchless"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fancy-regex = "0.14"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hickory-resolver = "0.25"
url = "2"
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
ego-tree = "0.10"

[dev-dependencies]
axum-test = "19"
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
